Add support for Java 22 and create tables in the database